test/errors/traits/no_matching_instance_found/main.sk
module Main {

struct Foo {

}

trait Bar[T] {
    fn bar(self) -> ()
}

struct Baz {

}

instance BarImpl Bar[Baz] {
    fn bar(self) -> () {

    }
}

fn main() {
    let f = Foo();
    f.bar();
}

}